Bugfix FLODOG params notebook

--- a/demo/demo_flodog_params.ipynb
+++ b/demo/demo_flodog_params.ipynb
@@ -131,7 +131,7 @@
     "    plt.plot(output[512, 250:750])\n",
     "    print(\"Done!\")\n",
     "\n",
-    "ipywidgets.interact_manual(f, sdmix=ipywidgets.FloatSlider(description = \"Scale-mixing Gaussian SD:\", min = 0.25, max = 3., value = .5, step=0.25), spatial_window_scalar=ipywidgets.FloatSlider(descrption = \"Spatial averaging window scalar:\", min = 1, max = 4, value = 2, step=1))"
+    "ipywidgets.interact_manual(f, sdmix=ipywidgets.FloatSlider(description = \"Scale-mixing Gaussian SD:\", min = 0.25, max = 3., value = .5, step=0.25), spatial_window_scalar=ipywidgets.FloatSlider(description = \"Spatial averaging window scalar:\", min = 1, max = 4, value = 2, step=1))"
    ]
   },
   {
