--- a/demo/re3.ipynb
+++ b/demo/re3.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b4e3519d",
    "metadata": {},
    "outputs": [],
@@ -109,14 +109,15 @@
     " $$\\frac{f_{o^*,s^*}}{\\sqrt{F_{x,y}*(\\sum_{o,s=0}^{5,6}{w_{o,s} f_{o,s})^2}}}=\\frac{f_{o,s}}{\\sqrt{G * N^2}} = \\frac{f_{o,s}}{\\sqrt{G * (W \\cdot f)^2}}$$\n",
     " \n",
     " Which helps us develop terminology. The entire fraction is called the divisive norm on the filterbank-output $f$.  \n",
-    " $G * N^2$ is the local energy, calculated as the convolution of $G$ the spatial weighting, and $N^2$ the Normcoefficient image squared. The Normcoefficient Image can be calculated in turn by computing the Normpool $W$ dotproduct against the same $f$ that we are normalizing.\n",
+    " $G * N^2$ is the local energy, calculated as the convolution of $G$ the spatial weighting, and $N^2$ the Normcoefficient image squared.  \n",
+    "The Normcoefficient Image can be calculated in turn by computing the Normpool $W$ dotproduct against the same $f$ that we are normalizing.\n",
     "   \n",
     "An implementation of this formulation can be found here:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "97891411",
    "metadata": {},
    "outputs": [],
@@ -173,13 +174,50 @@
    "source": [
     "Our goal is now to establish numerical equivalence between the traditional formulation and the result of the newly reformatted and mathematically motivated code\n",
     "\n",
-    "The original implementation is already tested against the matlab implementation of "
+    "The original implementation is already tested against the matlab implementation of RHS_2007, so we know it is sound.\n",
+    "  \n",
+    "We will use this notebook to figure out: 1) if all of the units of our new implementation act as expected and 2) if the integration of those units is again comparable to RHS_2007"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4e9fd5b",
+   "metadata": {},
+   "source": [
+    "Note that in the module, all of the below functions will appear in multyscale/test, separated into fixtures and tests."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3a27717c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filtershape():\n",
+    "    return (1024,1024)\n",
+    "\n",
+    "def test_unit_spatial_weighting(filter_shape):\n",
+    "    G = spatial_weighting(filter_shape)\n",
+    "    assert np.allclose(G, 1/np.prod(filter_shape))\n",
+    "    \n",
+    "test_unit_spatial_weighting(filtershape())\n",
+    "\n",
+    "def filteroutput():\n",
+    "    return np.random.random(shape=(6,7,1024,1024))\n",
+    "\n",
+    "def test_unit_normcoeff(filter_outputs):\n",
+    "    # use sum over scales formulation instead of linear filter\n",
+    "    N = np.zeros(shape=(6,7,1024,1024))\n",
+    "    for o, s in np.ndindex(filters_output.shape[:2]):\n",
+    "        N[o, s] = \n",
+    "        assert np.allclose(normcoeff(filter_outputs, o, s), N[o, s])        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a27717c",
+   "id": "896ccc0d",
    "metadata": {},
    "outputs": [],
    "source": []
