docs(normalization): unit test for normcoeff troubles

--- a/demo/re3.ipynb
+++ b/demo/re3.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4e9fd5b",
+   "id": "bf4f8648",
    "metadata": {},
    "source": [
     "Note that in the module, all of the below functions will appear in multyscale/test, separated into fixtures and tests."
@@ -189,10 +189,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3a27717c",
+   "execution_count": null,
+   "id": "399d759d",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "id": "d8aaf826",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3a27717c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_5988/4106493988.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0mtest_unit_normcoeff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilteroutput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_5988/4106493988.py\u001b[0m in \u001b[0;36mtest_unit_normcoeff\u001b[0;34m(filter_outputs)\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilter_outputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilter_outputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m             \u001b[0mN\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mfilter_outputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilter_outputs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnormcoeff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilter_outputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "def filtershape():\n",
     "    return (1024,1024)\n",
@@ -204,20 +231,26 @@
     "test_unit_spatial_weighting(filtershape())\n",
     "\n",
     "def filteroutput():\n",
-    "    return np.random.random(shape=(6,7,1024,1024))\n",
+    "    return np.random.random(size=(6,7,1024,1024))\n",
+    "\n",
     "\n",
     "def test_unit_normcoeff(filter_outputs):\n",
     "    # use sum over scales formulation instead of linear filter\n",
     "    N = np.zeros(shape=(6,7,1024,1024))\n",
-    "    for o, s in np.ndindex(filters_output.shape[:2]):\n",
-    "        N[o, s] = \n",
-    "        assert np.allclose(normcoeff(filter_outputs, o, s), N[o, s])        "
+    "    for o, s in np.ndindex(filter_outputs.shape[:2]):\n",
+    "        for x,y in np.ndindex(filter_outputs.shape[2:]):\n",
+    "            N[o, s, :, :] += 1/filter_outputs.shape[1] * np.sum(filter_outputs[o,:,x,y])\n",
+    "        print(f\"di)\n",
+    "        assert np.allclose(normcoeff(filter_outputs, o, s), N[o, s])  \n",
+    "        \n",
+    "        \n",
+    "test_unit_normcoeff(filteroutput())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "896ccc0d",
+   "id": "e743a729",
    "metadata": {},
    "outputs": [],
    "source": []
