docs(normalization): rest of the unit tests

--- a/demo/re3.ipynb
+++ b/demo/re3.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1b0ec8f2",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e7655c54",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "97891411",
    "metadata": {},
    "outputs": [],
@@ -135,22 +135,23 @@
     "    coeffs = np.tensordot(filter_outputs, w, axes=([0, 1], [0, 1]))\n",
     "    return coeffs\n",
     "\n",
-    "def normpool(S, O, o_0, s_0): # w_{o,s}\n",
+    "def normpool(O, S, o_0, s_0): # w_{o,s}\n",
     "    ODOG = True\n",
     "    LODOG, FLODOG = False, False\n",
-    "    w = np.ones(shape=(S,O))\n",
-    "    for o, s in zip(range(O), range(S)):\n",
-    "        if ODOG or LODOG:\n",
-    "            if o==o_0:\n",
-    "                w[o,s] = 1/S\n",
-    "            else:\n",
-    "                w[o,s] = 0\n",
+    "    w = np.ones(shape=(O,S))\n",
+    "    for o in range(O):\n",
+    "        for s in range(S):\n",
+    "            if ODOG or LODOG:\n",
+    "                if o==o_0:\n",
+    "                    w[o,s] = 1/S\n",
+    "                else:\n",
+    "                    w[o,s] = 0\n",
     "\n",
-    "        if FLODOG:\n",
-    "            if o==o_0:\n",
-    "                w[o,s] = 1 #gaussian(s-s_0)\n",
-    "            else:\n",
-    "                w[o,s] = 0\n",
+    "            if FLODOG:\n",
+    "                if o==o_0:\n",
+    "                    w[o,s] = 1 #gaussian(s-s_0)\n",
+    "                else:\n",
+    "                    w[o,s] = 0\n",
     "    return w\n",
     "\n",
     "def spatial_weighting(filter_shape):\n",
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf4f8648",
+   "id": "309a9c28",
    "metadata": {},
    "source": [
     "Note that in the module, all of the below functions will appear in multyscale/test, separated into fixtures and tests."
@@ -190,33 +191,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "399d759d",
+   "id": "4807ee1c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "raw",
-   "id": "d8aaf826",
+   "id": "48124545",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "3a27717c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_5988/4106493988.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0mtest_unit_normcoeff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilteroutput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_5988/4106493988.py\u001b[0m in \u001b[0;36mtest_unit_normcoeff\u001b[0;34m(filter_outputs)\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilter_outputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilter_outputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m             \u001b[0mN\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mfilter_outputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilter_outputs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnormcoeff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilter_outputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run full 6x7 analysis? [y/n]n\n",
+      "dimension 3,5 is sound\n",
+      "dimension 1,3 is sound\n",
+      "dimension 4,6 is sound\n",
+      "dimension 5,2 is sound\n",
+      "dimension 2,5 is sound\n"
      ]
     }
    ],
@@ -236,21 +237,34 @@
     "\n",
     "def test_unit_normcoeff(filter_outputs):\n",
     "    # use sum over scales formulation instead of linear filter\n",
-    "    N = np.zeros(shape=(6,7,1024,1024))\n",
-    "    for o, s in np.ndindex(filter_outputs.shape[:2]):\n",
-    "        for x,y in np.ndindex(filter_outputs.shape[2:]):\n",
-    "            N[o, s, :, :] += 1/filter_outputs.shape[1] * np.sum(filter_outputs[o,:,x,y])\n",
-    "        print(f\"di)\n",
-    "        assert np.allclose(normcoeff(filter_outputs, o, s), N[o, s])  \n",
+    "    if input(\"Run full 6x7 analysis? [y/n] \")==\"y\":\n",
+    "        N = np.zeros(shape=(6,7,1024,1024))\n",
+    "        for o, s in np.ndindex(filter_outputs.shape[:2]):\n",
+    "            for x,y in np.ndindex(filter_outputs.shape[2:]):\n",
+    "                N[o, s, x, y] = np.sum(filter_outputs[o,:,x,y]) / filter_outputs.shape[1]\n",
+    "            assert np.allclose(normcoeff(filter_outputs, o, s), N[o, s])\n",
+    "\n",
+    "            print(f\"dimension {o},{s} is sound\")\n",
+    "    else:\n",
+    "        print(\"only doing 5 dimensions chosen at random\")\n",
+    "        N = np.zeros(shape=(6,7,1024,1024))\n",
+    "        for i in range(5):\n",
+    "            o, s = np.random.randint(0,6), np.random.randint(0,7)\n",
+    "            for x,y in np.ndindex(filter_outputs.shape[2:]):\n",
+    "                N[o, s, x, y] = np.sum(filter_outputs[o,:,x,y]) / filter_outputs.shape[1]\n",
+    "            assert np.allclose(normcoeff(filter_outputs, o, s), N[o, s])\n",
+    "\n",
+    "            print(f\"dimension {o},{s} is sound\")\n",
     "        \n",
-    "        \n",
+    "\n",
+    "    \n",
     "test_unit_normcoeff(filteroutput())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e743a729",
+   "id": "cc491b3f",
    "metadata": {},
    "outputs": [],
    "source": []
