docs(normalization): integration test for divisive norm

--- a/demo/re3.ipynb
+++ b/demo/re3.ipynb
@@ -53,7 +53,7 @@
     "filterbank = multyscale.filterbank.RHS2007(filtershape=stimulus.shape, visextent=visextent)\n",
     "\n",
     "# Filter the example stimulus\n",
-    "filters_output = filterbank.apply(stimulus)"
+    "#filters_output = filterbank.apply(stimulus)"
    ]
   },
   {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b519b55f",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "97891411",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
     "    G = spatial_weighting(filter_outputs.shape[-2:])\n",
     "    N = normcoeff(filter_outputs, o, s)**2\n",
     "    \n",
-    "    z = scipy.signal.convolve(G, N, mode=\"same\")\n",
+    "    z = scipy.signal.convolve(G, N, mode=\"valid\")\n",
     "    normed_filter = filter_outputs[o,s,:] / np.sqrt(z)\n",
     "    return normed_filter\n",
     "\n",
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "3a27717c",
    "metadata": {},
    "outputs": [
@@ -212,12 +212,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run full 6x7 analysis? [y/n]n\n",
-      "dimension 3,5 is sound\n",
-      "dimension 1,3 is sound\n",
-      "dimension 4,6 is sound\n",
+      "Run full 6x7 analysis? [y/n] n\n",
+      "only doing 5 dimensions chosen at random\n",
+      "dimension 2,0 is sound\n",
+      "dimension 4,3 is sound\n",
+      "dimension 4,2 is sound\n",
+      "dimension 0,1 is sound\n",
+      "dimension 1,1 is sound\n",
+      "dimension 4,0 is sound\n",
       "dimension 5,2 is sound\n",
-      "dimension 2,5 is sound\n"
+      "dimension 4,1 is sound\n",
+      "dimension 0,4 is sound\n",
+      "dimension 3,3 is sound\n"
      ]
     }
    ],
@@ -258,7 +264,20 @@
     "        \n",
     "\n",
     "    \n",
-    "test_unit_normcoeff(filteroutput())"
+    "test_unit_normcoeff(filteroutput())\n",
+    "\n",
+    "\n",
+    "def test_unit_divisive(filter_outputs):\n",
+    "    for i in range(5):\n",
+    "        o, s = np.random.randint(0,6), np.random.randint(0,7)\n",
+    "        G = spatial_weighting(filter_outputs.shape[-2:])\n",
+    "        N = normcoeff(filter_outputs, o, s)**2\n",
+    "        z = np.mean(N)  \n",
+    "        normed_filter = filter_outputs[o,s,:] / np.sqrt(z)\n",
+    "        assert np.allclose(divisive_norm(filter_outputs, o, s), normed_filter)\n",
+    "\n",
+    "        print(f\"dimension {o},{s} is sound\")\n",
+    "test_unit_divisive(filteroutput())"
    ]
   },
   {
