docs(normalization): integration tests
does not (yet) recreate previous output

--- a/demo/re3.ipynb
+++ b/demo/re3.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "b519b55f",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
     "\n",
     "By renaming the remaining sum in the denominator, we can find an abstract formulation of the RMS-Norm as a sequence of linear filters\n",
     "\n",
-    " $$\\frac{f_{o^*,s^*}}{\\sqrt{F_{x,y}*(\\sum_{o,s=0}^{5,6}{w_{o,s} f_{o,s})^2}}}=\\frac{f_{o,s}}{\\sqrt{G * N^2}} = \\frac{f_{o,s}}{\\sqrt{G * (W \\cdot f)^2}}$$\n",
+    " $$\\frac{f_{o^*,s^*}}{\\sqrt{F_{x,y}*(\\sum_{o,s=0}^{5,6}{w_{o,s} f_{o,s})^2}}}=\\frac{f_{o^*,s^*}}{\\sqrt{G * N^2}} = \\frac{f_{o^*,s^*}}{\\sqrt{G * (W \\cdot f)^2}}$$\n",
     " \n",
     " Which helps us develop terminology. The entire fraction is called the divisive norm on the filterbank-output $f$.  \n",
     " $G * N^2$ is the local energy, calculated as the convolution of $G$ the spatial weighting, and $N^2$ the Normcoefficient image squared.  \n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "97891411",
    "metadata": {},
    "outputs": [],
@@ -190,21 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4807ee1c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "id": "48124545",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "3a27717c",
    "metadata": {},
    "outputs": [
@@ -212,18 +198,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "unit test normcoeff\n",
       "Run full 6x7 analysis? [y/n] n\n",
       "only doing 5 dimensions chosen at random\n",
-      "dimension 2,0 is sound\n",
-      "dimension 4,3 is sound\n",
-      "dimension 4,2 is sound\n",
-      "dimension 0,1 is sound\n",
-      "dimension 1,1 is sound\n",
-      "dimension 4,0 is sound\n",
-      "dimension 5,2 is sound\n",
-      "dimension 4,1 is sound\n",
+      "dimension 2,1 is sound\n",
+      "dimension 4,5 is sound\n",
+      "dimension 1,2 is sound\n",
+      "dimension 5,1 is sound\n",
+      "dimension 4,5 is sound\n",
+      "unit test divisive\n",
       "dimension 0,4 is sound\n",
-      "dimension 3,3 is sound\n"
+      "dimension 3,6 is sound\n",
+      "dimension 1,1 is sound\n",
+      "dimension 0,5 is sound\n",
+      "dimension 3,0 is sound\n"
      ]
     }
    ],
@@ -257,22 +245,22 @@
     "        for i in range(5):\n",
     "            o, s = np.random.randint(0,6), np.random.randint(0,7)\n",
     "            for x,y in np.ndindex(filter_outputs.shape[2:]):\n",
-    "                N[o, s, x, y] = np.sum(filter_outputs[o,:,x,y]) / filter_outputs.shape[1]\n",
+    "                N[o, s, x, y] = np.sum(filter_outputs[o,:,x,y]) / filter_outputs.shape[1] # Does W.f properly produce sum_o,s[w_o,s . f_o,s]\n",
     "            assert np.allclose(normcoeff(filter_outputs, o, s), N[o, s])\n",
     "\n",
     "            print(f\"dimension {o},{s} is sound\")\n",
     "        \n",
     "\n",
-    "    \n",
+    "print(\"unit test normcoeff\")\n",
     "test_unit_normcoeff(filteroutput())\n",
-    "\n",
+    "print(\"unit test divisive\")\n",
     "\n",
     "def test_unit_divisive(filter_outputs):\n",
     "    for i in range(5):\n",
     "        o, s = np.random.randint(0,6), np.random.randint(0,7)\n",
     "        G = spatial_weighting(filter_outputs.shape[-2:])\n",
     "        N = normcoeff(filter_outputs, o, s)**2\n",
-    "        z = np.mean(N)  \n",
+    "        z = np.mean(N)  # does N*G properly calculate mean(N)?\n",
     "        normed_filter = filter_outputs[o,s,:] / np.sqrt(z)\n",
     "        assert np.allclose(divisive_norm(filter_outputs, o, s), normed_filter)\n",
     "\n",
@@ -281,9 +269,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "afc4623f",
+   "metadata": {},
+   "source": [
+    "So as one can see, all of the steps agree with the mathematical formulation of ODOG. The next step will be, to analyze whether the new formulation agrees not only with the math, but also with the already verified original implementation that is present in the current codebase."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "56300fe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_3280/416394366.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;31m#assert np.allclose(output, output_odog_matlab)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mtest_integration_odog_reform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstimulus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_3280/416394366.py\u001b[0m in \u001b[0;36mtest_integration_odog_reform\u001b[0;34m(output_odog_matlab, stimulus)\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalize_outputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnormalize_multiple_outputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstimulus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m     \u001b[0;31m#assert np.allclose(output, output_odog_matlab)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import scipy\n",
+    "\n",
+    "def normalize_multiple_outputs(filters_output):\n",
+    "\n",
+    "    normalized_outputs = np.ones(shape=filters_output.shape)\n",
+    "    for o, s in np.ndindex(filters_output.shape[:2]):\n",
+    "        normalized_outputs[o,s] = divisive_norm(filters_output, o,s)\n",
+    "\n",
+    "    return normalized_outputs\n",
+    "\n",
+    "def test_integration_odog_reform(output_odog_matlab, stimulus):\n",
+    "    model = multyscale.models.ODOG_RHS2007(stimulus.shape, visextent)\n",
+    "    output2 = model.apply(stimulus)\n",
+    "    model.normalize_outputs = normalize_multiple_outputs\n",
+    "    output = model.apply(stimulus)\n",
+    "    assert np.allclose(output, output2)\n",
+    "    #assert np.allclose(output, output_odog_matlab)\n",
+    "    \n",
+    "test_integration_odog_reform(\"\", stimulus)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be557be3",
+   "metadata": {},
+   "source": [
+    "This code takes a while to complete, and has a very dissatisfying ending. The formulation right now cannot reproduce traditional output"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc491b3f",
+   "id": "a5b77b5f",
    "metadata": {},
    "outputs": [],
    "source": []
