docs(normalization): dividing by "images" produces ODOG normalization
..where "image" is 1024x1024 times the RMS

--- a/demo/re3.ipynb
+++ b/demo/re3.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b4e3519d",
    "metadata": {},
    "outputs": [],
@@ -29,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1b0ec8f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# %% Load example stimulus\n",
-    "stimulus = np.asarray(Image.open(\"image_source/example_stimulus.png\").convert(\"L\"))\n",
+    "stimulus = np.asarray(Image.open(\"example_stimulus.png\").convert(\"L\"))\n",
     "\n",
     "# %% Parameters of image\n",
     "# visual extent, same convention as pyplot:\n",
@@ -44,16 +44,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "a1e9446d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = multyscale.models.ODOG_RHS2007(shape=stimulus.shape, visextent=visextent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e7655c54",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Frontend filterbank of ODOG implementation by Robinson et al. (2007)\n",
-    "filterbank = multyscale.filterbank.RHS2007(filtershape=stimulus.shape, visextent=visextent)\n",
-    "\n",
+    "O, S = model.bank.filters.shape[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7e7f6b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Filter the example stimulus\n",
-    "#filters_output = filterbank.apply(stimulus)"
+    "filters_output = model.bank.apply(stimulus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "436e1ca2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Weight individual filter(outputs) according to spatial size (frequency)\n",
+    "filters_output = model.weight_outputs(filters_output)"
    ]
   },
   {
@@ -66,22 +95,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "b519b55f",
+   "execution_count": null,
+   "id": "7c119c91",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def normalize_outputs(self, filters_output):\n",
-    "        # TODO: docstring\n",
-    "        normalizers = self.normalizers(filters_output)\n",
-    "\n",
-    "        normalizer_RMS = self.normalizers_to_RMS(normalizers)\n",
-    "\n",
-    "        normalized_outputs = np.ndarray(filters_output.shape)\n",
-    "        for o, s in np.ndindex(filters_output.shape[:2]):\n",
-    "            normalized_outputs[o, s] = filters_output[o, s] / normalizer_RMS[o, s]\n",
-    "\n",
-    "        return normalized_outputs\n"
+    "normalized_outputs = model.normalize_outputs(filters_output)"
    ]
   },
   {
@@ -90,26 +109,108 @@
    "metadata": {},
    "source": [
     "We're comparing this to a new implementation which replaces the math of the original function by a more general form.  \n",
-    "The traditional ODOG formulation looks like this:\n",
-    "\n",
-    "$$ODOG: \\frac{f_{o^*,s^*}}{\\sqrt{\\frac{1}{1024^2}\\sum_{x,y=0}^{1024,1024}(\\sum_{o,s=1}^{O, S}{w_{o,s} f_{o,s})^2}}}$$\n",
-    "where $w_{o,s} =   \\begin{cases} \n",
-    "      1/S & o = o^*  \\\\\n",
+    "The traditional formulation for the normalization schema of ODOG can be formulated as:\n",
+    "$$ F' = \\frac{f_{o',s',x,y}}{\\sqrt{\\frac{1}{XY}\\sum_{y=1}^{Y} \\sum_{x=1}^{X}(\\sum_{o=1}^{O}\\sum_{s=1}^{S} {w_{o',s',o,s} f_{o,s,x,y})^2}}}$$\n",
+    "where $w_{o', s', o, s} =   \\begin{cases} \n",
+    "      1 & o = o'  \\\\\n",
     "      0 & else\n",
     "   \\end{cases} \n",
-    "$  \n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce890e25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normalizers = model.normalizers(filters_output)\n",
+    "\n",
+    "RMS = model.normalizers_to_RMS(normalizers)\n",
+    "\n",
+    "normed2 = np.ndarray(filters_output.shape)\n",
+    "for o,s in np.ndindex(filters_output.shape[:2]):\n",
+    "    normed2[o,s] = filters_output[o,s] / RMS[o,s]\n",
+    "\n",
+    "assert(np.allclose(normalized_outputs,normed2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66718ec2",
+   "metadata": {},
+   "source": [
+    "#### Can also divide by \"images\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c9b348d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i_RMS = np.tile(RMS.reshape(6,7,1,1),(1,1,1024,1024))\n",
+    "\n",
+    "norm_i_outputs = np.ndarray(filters_output.shape)\n",
+    "for o, s in np.ndindex(filters_output.shape[:2]):\n",
+    "    f = filters_output[o,s,...]\n",
+    "    n = i_RMS[o,s]\n",
+    "    norm_i_outputs[o, s] = f / n\n",
+    "\n",
+    "assert(np.allclose(normalized_outputs, norm_i_outputs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97f53a2f",
+   "metadata": {},
+   "source": [
     "This is equivalent to an equation that implements the averaging in the denominator as a linear filter, that scales the filter aggregate produced by the sum over scales/orientations. This changes the dimensionality of the denominator, but not actually the result of the division, since image by image division is executed pixel-wise\n",
     "\n",
-    "$$ODOG: \\frac{f_{o^*,s^*}}{\\sqrt{F_{x,y}*(\\sum_{o,s=0}^{5,6}{w_{o,s} f_{o,s})^2}}}$$\n",
+    "$$ODOG: \\frac{f_{o^*,s^*}}{\\sqrt{G_{x,y}*(\\sum_{o=1}^{O}\\sum_{s=1}^{S} {w_{o',s',o,s} f_{o,s,x,y})^2}}}$$\n",
     "$w_{o,s}$ same as above,  \n",
-    "$F_{x,y} = \\frac{1}{1024^2}$ everywhere.\n",
+    "$G_{x,y} = \\frac{1}{XY} = \\frac{1}{1024^2}$ everywhere."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "274ab70c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter = np.ones((1024,1024)) / 1024**2\n",
     "\n",
+    "iRMS2 = np.ones(filters_output.shape)\n",
+    "#for o,s in np.ndindex(filters_output.shape[:2]):\n",
+    "o=3\n",
+    "s=4\n",
+    "# calculate RMS using the filter\n",
+    "norm = normalizers[o,s].copy()\n",
+    "norm = norm ** 2\n",
+    "#mean = multyscale.filters.apply(norm, filter, padval=norm.mean())\n",
+    "#mean = norm.mean()\n",
+    "mean = scipy.signal.convolve2d(norm, filter, mode=\"same\", boundary=\"symm\")\n",
+    "iRMS2[o,s] = iRMS2[o,s]*np.sqrt(mean)\n",
+    "\n",
+    "plt.imshow(mean)\n",
+    "mean.shape\n",
+    "#assert(np.allclose(iRMS2, iRMS))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c597a480",
+   "metadata": {},
+   "source": [
     "By renaming the remaining sum in the denominator, we can find an abstract formulation of the RMS-Norm as a sequence of linear filters\n",
     "\n",
-    " $$\\frac{f_{o^*,s^*}}{\\sqrt{F_{x,y}*(\\sum_{o,s=0}^{5,6}{w_{o,s} f_{o,s})^2}}}=\\frac{f_{o^*,s^*}}{\\sqrt{G * N^2}} = \\frac{f_{o^*,s^*}}{\\sqrt{G * (W \\cdot f)^2}}$$\n",
+    " $$\\frac{f_{o^*,s^*}}{\\sqrt{G_{x,y}*(\\sum_{o=1}^{O}\\sum_{s=1}^{S} {w_{o',s',o,s} f_{o,s,x,y})^2}}}=\\frac{f_{o^*,s^*}}{\\sqrt{G * N^2}} = \\frac{f_{o^*,s^*}}{\\sqrt{G * (W \\cdot f)^2}}$$\n",
     " \n",
     " Which helps us develop terminology. The entire fraction is called the divisive norm on the filterbank-output $f$.  \n",
-    " $G * N^2$ is the local energy, calculated as the convolution of $G$ the spatial weighting, and $N^2$ the Normcoefficient image squared.  \n",
+    " $G * N^2$ is the (local) energy, calculated as the convolution of $G$ the spatial weighting, and $N^2$ the Normcoefficient image squared.  \n",
     "The Normcoefficient Image can be calculated in turn by computing the Normpool $W$ dotproduct against the same $f$ that we are normalizing.\n",
     "   \n",
     "An implementation of this formulation can be found here:"
@@ -117,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "97891411",
    "metadata": {},
    "outputs": [],
@@ -190,31 +291,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3a27717c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "unit test normcoeff\n",
-      "Run full 6x7 analysis? [y/n] n\n",
-      "only doing 5 dimensions chosen at random\n",
-      "dimension 2,1 is sound\n",
-      "dimension 4,5 is sound\n",
-      "dimension 1,2 is sound\n",
-      "dimension 5,1 is sound\n",
-      "dimension 4,5 is sound\n",
-      "unit test divisive\n",
-      "dimension 0,4 is sound\n",
-      "dimension 3,6 is sound\n",
-      "dimension 1,1 is sound\n",
-      "dimension 0,5 is sound\n",
-      "dimension 3,0 is sound\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def filtershape():\n",
     "    return (1024,1024)\n",
@@ -278,23 +358,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "56300fe0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3280/416394366.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;31m#assert np.allclose(output, output_odog_matlab)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mtest_integration_odog_reform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstimulus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_3280/416394366.py\u001b[0m in \u001b[0;36mtest_integration_odog_reform\u001b[0;34m(output_odog_matlab, stimulus)\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalize_outputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnormalize_multiple_outputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstimulus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m     \u001b[0;31m#assert np.allclose(output, output_odog_matlab)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import scipy\n",
     "\n",
@@ -324,14 +391,6 @@
    "source": [
     "This code takes a while to complete, and has a very dissatisfying ending. The formulation right now cannot reproduce traditional output"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5b77b5f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -350,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
