docs(normalization): spatial mean (ODOG) should be possible as filter

--- a/demo/re3.ipynb
+++ b/demo/re3.ipynb
@@ -138,6 +138,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eb2b2064",
+   "metadata": {},
+   "source": [
+    "## Implement RMS as a spatial filter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "66718ec2",
    "metadata": {},
    "source": [
@@ -172,6 +180,14 @@
     "$$ODOG: \\frac{f_{o^*,s^*}}{\\sqrt{G_{x,y}*(\\sum_{o=1}^{O}\\sum_{s=1}^{S} {w_{o',s',o,s} f_{o,s,x,y})^2}}}$$\n",
     "$w_{o,s}$ same as above,  \n",
     "$G_{x,y} = \\frac{1}{XY} = \\frac{1}{1024^2}$ everywhere."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "973d9d93",
+   "metadata": {},
+   "source": [
+    "### Implement spatial mean as spatial filter"
    ]
   },
   {
@@ -267,6 +283,14 @@
     "    if FLODOG:\n",
     "        G = 1 #gaussian(filter_shape, sigma=k*s)\n",
     "    return G"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "601f1394",
+   "metadata": {},
+   "source": [
+    "# Regresssion test new formulation"
    ]
   },
   {
