--- a/demo/re3.ipynb
+++ b/demo/re3.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b4e3519d",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "1b0ec8f2",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "a1e9446d",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "e7655c54",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "c7e7f6b5",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "436e1ca2",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "7c119c91",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "ce890e25",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "0c9b348d",
    "metadata": {},
    "outputs": [],
@@ -192,28 +192,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "274ab70c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[48.6861275, 48.6861275, 48.6861275, ..., 48.6861275, 48.6861275,\n",
+       "        48.6861275],\n",
+       "       [48.6861275, 48.6861275, 48.6861275, ..., 48.6861275, 48.6861275,\n",
+       "        48.6861275],\n",
+       "       [48.6861275, 48.6861275, 48.6861275, ..., 48.6861275, 48.6861275,\n",
+       "        48.6861275],\n",
+       "       ...,\n",
+       "       [48.6861275, 48.6861275, 48.6861275, ..., 48.6861275, 48.6861275,\n",
+       "        48.6861275],\n",
+       "       [48.6861275, 48.6861275, 48.6861275, ..., 48.6861275, 48.6861275,\n",
+       "        48.6861275],\n",
+       "       [48.6861275, 48.6861275, 48.6861275, ..., 48.6861275, 48.6861275,\n",
+       "        48.6861275]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "filter = np.ones((1024,1024)) / 1024**2\n",
+    "G = np.ones((1024*2,1024*2)) / 1024**2\n",
     "\n",
     "iRMS2 = np.ones(filters_output.shape)\n",
-    "#for o,s in np.ndindex(filters_output.shape[:2]):\n",
     "o=3\n",
     "s=4\n",
     "# calculate RMS using the filter\n",
     "norm = normalizers[o,s].copy()\n",
     "norm = norm ** 2\n",
-    "#mean = multyscale.filters.apply(norm, filter, padval=norm.mean())\n",
-    "#mean = norm.mean()\n",
-    "mean = scipy.signal.convolve2d(norm, filter, mode=\"same\", boundary=\"symm\")\n",
+    "mean = multyscale.filters.apply(norm, G, padval=0)\n",
     "iRMS2[o,s] = iRMS2[o,s]*np.sqrt(mean)\n",
-    "\n",
-    "plt.imshow(mean)\n",
-    "mean.shape\n",
-    "#assert(np.allclose(iRMS2, iRMS))"
+    "# this replicates the just verified \n",
+    "assert(np.allclose(iRMS2[o,s], i_RMS[o,s]))"
    ]
   },
   {
@@ -234,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "97891411",
    "metadata": {},
    "outputs": [],
@@ -243,7 +261,7 @@
     "    G = spatial_weighting(filter_outputs.shape[-2:])\n",
     "    N = normcoeff(filter_outputs, o, s)**2\n",
     "    \n",
-    "    z = scipy.signal.convolve(G, N, mode=\"valid\")\n",
+    "    z = multyscale.filters.apply(N, G, padval=0)\n",
     "    normed_filter = filter_outputs[o,s,:] / np.sqrt(z)\n",
     "    return normed_filter\n",
     "\n",
@@ -275,7 +293,7 @@
     "    ODOG = True\n",
     "    LODOG, FLODOG = False, False\n",
     "    if ODOG:\n",
-    "        G = np.ones(filter_shape) / np.prod(filter_shape)\n",
+    "        G = np.ones([dim*2 for dim in filter_shape]) / np.prod(filter_shape)\n",
     "        \n",
     "    if LODOG:\n",
     "        G = 1 #gaussian(filter_shape, sigma)\n",
@@ -315,10 +333,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "3a27717c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unit test normcoeff\n",
+      "Run full 6x7 analysis? [y/n] n\n",
+      "only doing 5 dimensions chosen at random\n",
+      "dimension 2,6 is sound\n",
+      "dimension 3,0 is sound\n",
+      "dimension 4,5 is sound\n",
+      "dimension 1,3 is sound\n",
+      "dimension 0,2 is sound\n",
+      "unit test divisive\n",
+      "dimension 2,5 is sound\n",
+      "dimension 0,2 is sound\n",
+      "dimension 3,0 is sound\n",
+      "dimension 4,0 is sound\n",
+      "dimension 5,4 is sound\n"
+     ]
+    }
+   ],
    "source": [
     "def filtershape():\n",
     "    return (1024,1024)\n",
@@ -382,10 +421,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "56300fe0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_2666/416394366.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;31m#assert np.allclose(output, output_odog_matlab)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mtest_integration_odog_reform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstimulus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_2666/416394366.py\u001b[0m in \u001b[0;36mtest_integration_odog_reform\u001b[0;34m(output_odog_matlab, stimulus)\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalize_outputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnormalize_multiple_outputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstimulus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m     \u001b[0;31m#assert np.allclose(output, output_odog_matlab)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import scipy\n",
     "\n",
@@ -433,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
